--- a/content/themes/TARVA/assets/css/screen.css
+++ b/content/themes/TARVA/assets/css/screen.css
@@ -1625,9 +1625,9 @@ a:hover {
 ----------------------------------*/
 /* line 115, ../scss/core/_layout.scss */
 .content {
+  overflow-x: hidden;
   min-height: 93.2vh;
   background-color: white;
-  overflow: auto;
 }
 @media screen and (min-width: 48em) {
   /* line 115, ../scss/core/_layout.scss */
