--- a/content/themes/TARVA/assets/scss/core/_layout.scss
+++ b/content/themes/TARVA/assets/scss/core/_layout.scss
@@ -114,10 +114,10 @@
 
 .content {
 	// height: 100%;
-	// overflow-x: hidden;
+	overflow-x: hidden;
 	min-height: 93.2vh;
 	background-color: white;
-	overflow: auto;
+	// overflow: auto;
 	@include respond-min($bp2) {
 		width: 75%;
 		float: right;
